--- a/stats-ml.Rmd
+++ b/stats-ml.Rmd
@@ -9,6 +9,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+# renv::init()
+# source('renv/activate.R.')
 ```
 
 ## Instructions
@@ -64,6 +66,8 @@ predict(m, data.frame(distance = 0.5), se = TRUE, type = "response")
 Questions and tasks:
 
 - Comment on the fit, plot residuals and comment on them.
+The fitness is not bad, as same as the residuals.
+
 - Comment on the prediction; does it seem reasonable?
 
 
